@@ -1,3 +1,10 @@
+2013-07-22  Ana Vazquez <anainesvs@gmail.com>
+
+        * [r105] man/pedigreemm.Rd: Add example.
+        * [r104] R/pedigree.R: put labels to return of the functions relfactor, A and Ainverse 
+        * [r103] R/pedigree.R: added indexing in  rownames(Zt)[rowsi]
+
+
 2012-08-19  Ana Vazquez <anainesvs@gmail.com>
 
         * [r102] man/editPed.Rd: Correction F by FALSE; new release.
